--- a/apps/jobs/package.json
+++ b/apps/jobs/package.json
@@ -7,6 +7,8 @@
     "dev": "nuxt dev --host 127.0.0.1",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
+    "lint": "npx eslint",
+    "lint:fix": "pnpm lint --fix",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
