--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,14 +28,20 @@
 
     // "eslint.experimental.useFlatConfig": true,
     // "tailwindCSS.experimental.configFile": "packages/ui/tailwind.config.ts",
-    "tailwindCSS.experimental.classRegex": ["tw`(.*?)`", "tw\\('(.*?)'\\)"],
+    
+    // "tailwindCSS.experimental.classRegex": ["tw`(.*?)`", "tw\\('(.*?)'\\)"],
+    "tailwindCSS.experimental.classRegex": ["tw`(.*?)`", "tw\\('(.*?)'\\)", "tw\\(\\s*('(.*?)'|\"(.*?)\")\\s*\\)"],
+    "files.associations": {
+        "*.css": "tailwindcss"
+    },
+    // "tailwindCSS.experimental.configFile": "packages/ui/.nuxt/tailwind.config.cjs",
+
     // "files.associations": {
     //     "*.scss": "tailwindcss"
     // },
     "editor.quickSuggestions": {
-        "strings": true
+        "strings": "on"
     },
-    
     // "eslint.validate": [
     //     "javascript",
     //     "typescript",
