--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -24,7 +24,7 @@
         "@nuxtjs/device": "^3.1.1",
         "@nuxtjs/eslint-config-typescript": "^12.1.0",
         "@nuxtjs/eslint-module": "^4.1.0",
-        "@nuxtjs/tailwindcss": "^6.11.4",
+        "@nuxtjs/tailwindcss": "^6.12.0",
         "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
         "@tailwindcss/typography": "^0.5.10",
         "@types/node": "^20.11.26",
@@ -57,6 +57,7 @@
         "nuxt": "^3.10.3",
         "radix-vue": "^1.7.2",
         "tailwind-merge": "^2.2.1",
+        "tailwindcss": "^3.4.3",
         "tailwindcss-animate": "^1.0.7",
         "v-wave": "^2.0.0",
         "vee-validate": "^4.12.6",
